--- a/welcome.html
+++ b/welcome.html
@@ -14,58 +14,54 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="schedule/week01/">Week 1</a></td>
+<td><a href="schedule/week01.html">Week 1</a></td>
 <td>08/27 and 08/29</td>
-<td><a href="schedule/week01/">Course Introduction &amp; How does the web work?</a></td>
+<td><a href="schedule/week01.html">Course Introduction &amp; How does the web work?</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week02/">Week 2</a></td>
-<td>01/22 and 01/24</td>
-<td><a href="schedule/week02/">HTML</a></td>
-</tr>
-<tr>
-<td><a href="schedule/week03/">Week 3</a></td>
+<td><a href="schedule/week02.html">Week 2</a></td>
 <td>09/03 and 09/05</td>
-<td><a href="schedule/week03/">More HTML</a></td>
+<td><a href="schedule/week02.html">HTML</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week04/">Week 4</a></td>
+<td><a href="schedule/week03.html">Week 3</a></td>
 <td>09/10 and 09/12</td>
-<td><a href="schedule/week04/">Introduction to CSS</a></td>
+<td><a href="schedule/week03.html">More HTML</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week05/">Week 5</a></td>
+<td><a href="schedule/week04.html">Week 4</a></td>
 <td>09/17 and 09/19</td>
-<td><a href="schedule/week05/">Web Dev. Lifecycle, CSS Selectors</a></td>
+<td><a href="schedule/week04.html">Introduction to CSS</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week06/">Week 6</a></td>
+<td><a href="schedule/week05.html">Week 5</a></td>
 <td>09/24 and 09/26</td>
-<td><a href="schedule/week06/">Basic Layouts in CSS</a> <strong>Wireframes Due</strong></td>
+<td><a href="schedule/week05.html">Web Dev. Lifecycle, CSS Selectors</a></td>
 </tr>
 <tr>
-<td>Week 7<!-- (schedule/week07.md) --></td>
+<td><a href="schedule/week06.html">Week 6</a></td>
 <td>10/01 and 10/03</td>
-<td>Mid-term Exam, More CSS Layout <!-- (schedule/week07.md) --></td>
+<td><a href="schedule/week06.html">Basic Layouts in CSS</a> <strong>Wireframes Due</strong></td>
 </tr>
 <tr>
-<td><a href="schedule/week08/">Week 8</a></td>
+  <td><a href="schedule/week07.html">Week 7</a></td>
 <td>10/08 and 10/10</td>
-<td><a href="schedule/week08/">Responsive Design</a></td>
+  <td><a href="schedule/week07.html">Mid-term Exam, More CSS Layout</a></td>
+</tr>
+<tr>
+<td><a href="schedule/week08.html">Week 8</a></td>
+<td>10/15 and 10/17</td>
+<td><a href="schedule/week08.html">Responsive Design</a></td>
 </tr>
 <tr>
 <td><strong>Project Deliverable</strong></td>
-<td>10/12/2019 11:59 PM</td>
+<td>10/19/2019 11:59 PM</td>
 <td><strong>Semantic HTML (v1)</strong></td>
 </tr>
 <tr>
-<td>Week 9</td>
-<td>10/15 and 10/17</td>
-</tr>
-<tr>
-<td><a href="schedule/week10/">Week 10</a></td>
+<td>< href="schedule/week09.html">Week 9</td>
 <td>10/22 and 10/24</td>
-<td><a href="schedule/week10/">Web Content Accessibility, HTML Forms</a></td>
+<td><a href="schedule/week09.html">Web Content Accessibility, HTML Forms</a></td>
 </tr>
 <tr>
 <td><strong>Project Deliverable</strong></td>
@@ -73,21 +69,24 @@
 <td><strong>v2 of Project Website</strong></td>
 </tr>
 <tr>
-<td><a href="schedule/week11/">Week 11</a></td>
+<td><a href="schedule/week10.html">Week 10</a></td>
 <td>10/29 and 10/31</td>
-<td><a href="schedule/week11/">Intro. to Bootstrap</a></td>
+<td><a href="schedule/week10.html">Intro. to Bootstrap</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week12/">Week 12</a></td>
+<td><a href="schedule/week11.html">Week 11</a></td>
 <td>11/05 and 11/07</td>
-<td><a href="schedule/week12/">Bootstrap Components</a></td>
+<td><a href="schedule/week11.html">Bootstrap Components</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week13/">Week 13</a></td>
+<td><a href="schedule/week12.html">Week 12</a></td>
 <td>11/12 and 11/15</td>
-<td><a href="(schedule/week12.md)">Bootstrap Layouts</a></td>
+<td><a href="(schedule/week12.html)">Bootstrap Layouts</a></td>
 </tr>
 <tr>
+<td>Week 13</td>
+<td>11/19 and 11/21</td>
+<td>Project Help</td>
 <td>Week 14</td>
 <td>11/25&ndash;11/29 </td>
 <td>Thanksgiving Break - No classes</td>
@@ -103,9 +102,9 @@
 <td><strong>v3 of Project Website</strong></td>
 </tr>
 <tr>
-<td>Week 16</td>
+  <td><a href="/schedule/week16.html">Week 16</a></td>
 <td>12/10</td>
-<td>Content Management Systems</td>
+  <td><a href="/schedule/week16.html">Content Management Systems</a></td>
 </tr>
 </tbody>
 </table>
