--- a/welcome.html
+++ b/welcome.html
@@ -59,19 +59,19 @@
 <td><strong>Semantic HTML (v1)</strong></td>
 </tr>
 <tr>
-<td>< href="schedule/week09.html">Week 9</td>
+<td><a href="schedule/week09.html">Week 9</a></td>
 <td>10/22 and 10/24</td>
 <td><a href="schedule/week09.html">Web Content Accessibility, HTML Forms</a></td>
-</tr>
-<tr>
-<td><strong>Project Deliverable</strong></td>
-<td>10/26/2019 11:59 PM</td>
-<td><strong>v2 of Project Website</strong></td>
 </tr>
 <tr>
 <td><a href="schedule/week10.html">Week 10</a></td>
 <td>10/29 and 10/31</td>
 <td><a href="schedule/week10.html">Intro. to Bootstrap</a></td>
+</tr>
+<tr>
+<td><strong>Project Deliverable</strong></td>
+<td>11/02/2019 11:59 PM</td>
+<td><strong>v2 of Project Website</strong></td>
 </tr>
 <tr>
 <td><a href="schedule/week11.html">Week 11</a></td>
@@ -81,12 +81,14 @@
 <tr>
 <td><a href="schedule/week12.html">Week 12</a></td>
 <td>11/12 and 11/15</td>
-<td><a href="(schedule/week12.html)">Bootstrap Layouts</a></td>
+<td><a href="schedule/week12.html">Bootstrap Layouts</a></td>
 </tr>
 <tr>
 <td>Week 13</td>
 <td>11/19 and 11/21</td>
 <td>Project Help</td>
+</tr>
+<tr>
 <td>Week 14</td>
 <td>11/25&ndash;11/29 </td>
 <td>Thanksgiving Break - No classes</td>
