--- a/welcome.html
+++ b/welcome.html
@@ -115,7 +115,7 @@
 <h2 id="office-hours">Office Hours</h2>
 <p>Hinds Hall 239, Thursday 11am&ndash;12pm. If you cannot make it during my regular office hours <a href="mailto:dwtalley@syr.edu">please email</a> for an appointment.</p>
 <h2 id="classroom-meeting-times">Classroom &amp; Meeting Times</h2>
-<p>Hinds Hall, Room 018, TuTh 8:00&ndash;9:20am (Section M0001) and 9:30&ndash10:50am (Section M0002)</p>
+<p>Hinds Hall, Room 018, TuTh 8:00&ndash;9:20am (Section M0001) and 9:30&ndash;10:50am (Section M0002)</p>
 <h2 id="about-the-instructor">About the Instructor</h2>
 <p>Mr. Talley recently joined the iSchool faculty as adjunct instructor after a long career in web content management and e-commerce consulting. He holds a Master of Library and Information Science degree from the University of Washington iSchool. </p>
 </section>
