--- a/welcome.html
+++ b/welcome.html
@@ -1,6 +1,6 @@
 <section id="header-panel">
 <h1 id="welcome-to-ist-263">Welcome to IST 263</h1>
-  <p>Welcome to Intro. to Front-end Web Development at the iSchool.</p>
+  <p>Welcome to IST263Intro. to Front-end Web Development at the iSchool.</p>
 </section>
 <section id="schedule">
 <h2 id="schedule-overview">Schedule Overview</h2>
