--- a/welcome.html
+++ b/welcome.html
@@ -5,7 +5,7 @@ Nav links will go here
 <div id="page-body" style="width 78%; float:right;">
 <section id="header-panel">
 <h1 id="welcome-to-ist-263">Welcome to IST 263</h1>
-  <p>Welcome to IST263Intro. to Front-end Web Development at the iSchool.</p>
+  <p>Welcome to IST263 - Intro. to Front-end Web Development at the iSchool.</p>
 </section>
 <section id="schedule">
 <h2 id="schedule-overview">Schedule Overview</h2>
