--- a/syllabus.html
+++ b/syllabus.html
@@ -14,7 +14,7 @@ Office: Hinds Hall 239<br/>
 Office Hours: Thursdays, 11am-noon EST<br/>
 Email: <a href="mailto:dwtalley@syr.edu">dwtalley@syr.edu</a><p>
 ____________________________________________________________________________
-<a name="course-description"><h3>Course Description:<h3>
+    <a name="course-description"></a><h3>Course Description</h3>
 <p>Principles for construction and publication of multimedia documents for the World Wide Web. Incorporate a user-based approach to planning, design, implementation, and management in distributed network environments.</p>
 <ul>
 <li>Prerequisite / Co-requisite: None</li>
