--- a/syllabus.html
+++ b/syllabus.html
@@ -28,7 +28,7 @@ ____________________________________________________________________________
 <li>Credits: 3</li>
 <li>Texts / Supplies – Required: No textbook is required. Students should bring personal laptop computers to class every session.</li>
 </ul>
-<a name="learning-objectives"></a><h3>Learning Objectives:
+    <a name="learning-objectives"></a><h3>Learning Objectives</h3>
 <p>After taking this course, the students will be able to:
 <ul>
 <li>Memorize key terms and definitions related to common web technologies</li>
@@ -37,31 +37,31 @@ ____________________________________________________________________________
 <li>Consider entrepreneurial opportunities in respect to web design, issues such as web 2.0, HTML5, web technologies and related issues</li>
 </p>
 <a name="course-requirements"><h3>Course Requirements and Expectations</h3>
-<p><strong>Assignments</p>
-<table>
+    <p><strong>Assignments</p></strong></p>
+<table cellpadding="5px" cell spacing="5px">
 <thead>
 <tr>
 <th>BB</th><th>Code</th><th>Total Points</th>
 </tr>
 </thead>
 <tr>
-<td>Midterm Exam</td>
+<td>Midterm&nbsp;Exam</td>
 <td>MTE</td>
 <td>12</td>
 <tr>
-<td>Pre-Class Summary</td>
+<td>Pre-Class&nbsp;Summary</td>
 <td>PCM</td>
 <td>8(0.25 for each class)</td>
 <tr>
-<td>Weekly Assignments</td>
+<td>Weekly&nbsp;Assignments</td>
 <td>W*</td>
 <td>20</td>
 <tr>
-<td>Class Contribution</td>
+<td>Class&nbsp;Contribution</td>
 <td>CC</td>
 <td>10</td>
 <tr>
-<td>Individual Project</td>
+<td>Individual&nbsp;Project</td>
 <td>INDVPR</td>
 <td>50</td>
 <tr>
@@ -72,7 +72,7 @@ ____________________________________________________________________________
 <td></td>
 <td></td>
 <td>100</td>
-<td>Midterm Exam</td>
+<td>Midterm&nbsp;Exam</td>
 <td>This will be a closed book exam. This is used to evaluate your recall and understanding of course material, as well as your ability to apply it to new situations.</td
 </tr>
 </table>
@@ -96,7 +96,7 @@ NOTE: NONE of the information submitted in these reports will be used in the det
 <tr>
 <th></th>
 <th>Grade</th>
-<th>Points Earned</th>
+<th>Points&nbsp;Earned</th>
 </tr>
 </thead>
 <tr></td>
@@ -175,12 +175,12 @@ Syracuse University’s Blackboard system will be used for announcements. You ca
 <p>Attendance in classes is expected in all courses at Syracuse University. Students are expected to arrive on campus in time to attend the first meeting of all classes for which they are registered.  Students who do not attend classes starting with the first scheduled meeting may be academically withdrawn as not making progress toward degree by failure to attend. Instructors set course-specific policies for absences from scheduled class meetings in their syllabi.</p>
 <p>It is a federal requirement that students who do not attend or cease to attend a class to be reported at the time of determination by the faculty. Faculty should use “ESPR” and “MSPR” in Orange Success to alert the Office of the Registrar and the Office of Financial Aid. A grade of NA is posted to any student for whom the Never Attended flag is raised in Orange SUccess. More information regarding Orange SUccess can be found here, at: <a href="http://orangesuccess.syr.edu/getting-started-2/">http://orangesuccess.syr.edu/getting-started-2/</a></p>
 <p>Students should also review the University’s religious observance policy and make the required arrangements at the beginning of each semester.</p>
-<a name="su-policies"</a><h3>Syracuse University Policies</h3>
+<a name="su-policies"></a><h3>Syracuse University Policies</h3>
 <p>Syracuse University has a variety of other policies designed to guarantee that students live and study in a community respectful of their needs and those of fellow students. Some of the most important of these concerns: 
 <p>Diversity and Disability (ensuring that students are aware of their rights and responsibilities in a diverse, inclusive, accessible, bias-free campus community) can be found here, at <a href="https://www.syracuse.edu/life/accessibilitydiversity/">https://www.syracuse.edu/life/accessibilitydiversity/</a></p>
 <p>Religious Observances Notification and Policy (steps to follow to request accommodations for the observance of religious holidays) can be found here, at: <a href="http://supolicies.syr.edu/studs/religious_observance.htm">http://supolicies.syr.edu/studs/religious_observance.htm</a></a></p>
 <p>Orange SUccess (tools to access a variety of SU resources, including ways to communicate with advisors and faculty members) can be found here, at: <a href="http://orangesuccess.syr.edu/getting-started-2/">http://orangesuccess.syr.edu/getting-started-2/</a></p>
-<p><strong>Disability-Related Accommodations:<strong></p>
+<p><strong>Disability-Related Accommodations:</strong></p>
 <p>Syracuse University values diversity and inclusion; we are committed to a climate of mutual respect and full participation. There may be aspects of the instruction or design of this course that result in barriers to your inclusion and full participation in this course. I invite any student to meet with me to discuss strategies and/or accommodations (academic adjustments) that may be essential to your success and to collaborate with the Office of Disability Services (ODS) in this process.</p>
 <p>If you would like to discuss disability-accommodations or register with ODS, please visit their website at http://disabilityservices.syr.edu./ Please call (315) 443-4498 or email disabilityservices@syr.edu for more detailed information.</p>
 <p>ODS is responsible for coordinating disability-related academic accommodations and will work with the student to develop an access plan. Since academic accommodations may require early planning and generally are not provided retroactively, please contact ODS as soon as possible to begin this process.</p>
