--- a/syllabus.html
+++ b/syllabus.html
@@ -93,7 +93,7 @@ ____________________________________________________________________________
 <p>SAGE is a required online self-assessment. Each week you’ll answer questions focused on course-related behaviors that I believe are essential for success. Once you’ve done so you’ll be able to see the pattern of your responses in the context of the patterns of others in the class My hope is that this will help you by continuously reminding you of the actions that make for success.<br />
 NOTE: NONE of the information submitted in these reports will be used in the determination of your grade - so be honest with yourself and me.</p>
 <p><strong>Final Grade Calculation</strong></p>
-<table>
+<table cellpadding="5px" cellspacing="5px">
 <thead>
 <tr>
 <th></th>
