--- a/syllabus.html
+++ b/syllabus.html
@@ -73,11 +73,10 @@ ____________________________________________________________________________
 <td></td>
 <td>100</td>
 </tr>
-<tr>
-<td>Midterm&nbsp;Exam</td>
-<td>This will be a closed book exam. This is used to evaluate your recall and understanding of course material, as well as your ability to apply it to new situations.</td
-</tr>
 </table>
+    <p><strong>Midterm&nbsp;Exam</strong></p>
+<p>This will be a closed book exam. This is used to evaluate your recall and understanding of course material, as well as your ability to apply it to new situations.</td
+
 <p><strong>Weekly Assignments</strong></p>
 <p>Most weeks you will have some form of assignment. It could be summarizing some reading material, and/or writing HTML/CSS/Javascript.
 <ul>
