--- a/syllabus.html
+++ b/syllabus.html
@@ -160,9 +160,9 @@ Syracuse University’s Blackboard system will be used for announcements. You ca
 <p>Blackboard submission timestamps all submitted work. Any work submitted late will be evaluated but no points will be awarded. Refer to Section ‘Weekly Assignments’ in Page 3 that discusses assignment submission.</p>
 <p><strong>Technology Requirements</strong></p>
 <p>Each of the following technology requirements are mandatory. You must set them up as their use is essential to your grade in the course.</p>
-<p><strong>Bring Your Own Device &mdash; This course uses the BYOD (Bring Your Own Device) model. The expectations are that you own a notebook computer and you will bring it to every class fully charged. If you don’t own a notebook computer you can borrow one from the iSchool using your SUID. You will be expected to install software on your notebook computer. Instructions will be provided.</p>
+<p><strong>Bring Your Own Device</strong> &mdash; This course uses the BYOD (Bring Your Own Device) model. The expectations are that you own a notebook computer and you will bring it to every class fully charged. If you don’t own a notebook computer you can borrow one from the iSchool using your SUID. You will be expected to install software on your notebook computer. Instructions will be provided.</p>
 <p><strong>Integrated Development Environment (IDE)</strong></p>
-<p>This course will require the use of an IDE. Based on your notebook operating system select one from the list below. Visit the [instructions and setup page] (about/computer-setup.md) to learn more.</p>
+<p>This course will require the use of an IDE. Based on your notebook operating system select one from the list below. Visit the <a href="/about/computer-setup.html">instructions and setup page</a> to learn more.</p>
 <p><strong>A Strategy for Success</strong></p>
 <ul>
 <li>Do the assigned reading for the week before the week begins</li>
