--- a/syllabus.html
+++ b/syllabus.html
@@ -162,7 +162,7 @@ Syracuse University’s Blackboard system will be used for announcements. You ca
 <p>Each of the following technology requirements are mandatory. You must set them up as their use is essential to your grade in the course.</p>
 <p><strong>Bring Your Own Device</strong> &mdash; This course uses the BYOD (Bring Your Own Device) model. The expectations are that you own a notebook computer and you will bring it to every class fully charged. If you don’t own a notebook computer you can borrow one from the iSchool using your SUID. You will be expected to install software on your notebook computer. Instructions will be provided.</p>
 <p><strong>Integrated Development Environment (IDE)</strong></p>
-<p>This course will require the use of an IDE. Based on your notebook operating system select one from the list below. Visit the <a href="/about/computer-setup.html">instructions and setup page</a> to learn more.</p>
+<p>This course will require the use of an IDE. Based on your notebook operating system select one from the list below. Visit the <a href="../about/computer-setup.html">instructions and setup page</a> to learn more.</p>
 <p><strong>A Strategy for Success</strong></p>
 <ul>
 <li>Do the assigned reading for the week before the week begins</li>
