--- a/computer-setup.html
+++ b/computer-setup.html
@@ -2,7 +2,7 @@
 <div id="nav-column" style="width:20%; float:left;">
 Nav links will go here
 </div>
-<main id="page-content" style="width 78%; float:right;">
+<div role="main" id="page-content" style="width 78%; float:right;">
 <section id="header-panel">
 <h1>Computer Setup for IST263</h1>
 </section>
@@ -105,7 +105,7 @@ than using the typical LMS. It will seem foreign when you start but be a little 
 </div>
 </div>
 </section>
-</main>
+</div>
     <footer class="col-md-12 text-center">
         
         <hr>
