--- a/individual-project.html
+++ b/individual-project.html
@@ -16,7 +16,7 @@ Nav links will go here
 <li>Easy to find images, video and other multimedia resources</li>
 <li>Something that you can showcase during an internship or job interview</li>
 </ul>
-<h2 id="how-to-submit-website-other-deliverables">How to submit website &amp; other deliverables?</h2>
+    <a name="#meeting-milestones"></a><h2 id="how-to-submit-website-other-deliverables">How to submit website &amp; other deliverables?</h2>
 <p>Similar to you weekly assignments, the project and all deliberables must be submitted via GitHub. Project documents that is emailed or submitted via Blackboard will receive 0 points.</p>
 <h3 id="grading-rubrik-and-project-milestones">Grading rubrik and Project Milestones</h3>
 <p>This project has a total point value of 50. This is divided as follows</p>
