--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Nav links will go here
 <h2 id="classroom-meeting-times">Classroom &amp; Meeting Times</h2>
 <p>Hinds Hall, Room 018, TuTh 8:00&ndash;9:20am (Section M0001) and 9:30&ndash;10:50am (Section M0002)</p>
 <h2 id="about-the-instructor">About the Instructor</h2>
-<p>Mr. Talley recently joined the iSchool faculty as adjunct instructor after a long career in web content management and e-commerce consulting. He holds a Master of Library and Information Science degree from the University of Washington iSchool. </p>
+<p><img src="https://minio.webservices.ischool.syr.edu/media-prod/private/user_profiles.ischool.service/d8ca9da4-035f-44c7-aa7a-a431781eecdf/w_150%2Ch_150%2C/medec2012150w.jpg" align="right"/>Mr. Talley recently joined the iSchool faculty as adjunct instructor after a long career in web content management and e-commerce consulting. He holds a Master of Library and Information Science degree from the University of Washington iSchool. </p>
 </section>
   </main>
     <footer class="col-md-12 text-center">
