--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<div id="page-container" style="width:1024px; margin: 0 auto;">
+<style>
+  #page-container {width:1024px; margin: 0 auto; background-color: #ccc;}
+</style>
+<div id="page-container">
 <div id="nav-column" style="width:20%; float:left;">
 Nav links will go here
 </div>
