--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <style>
-  #page-container {width:1024px; margin: 0 auto; background-color: #ccc;}
+  #page-container {max-width:1024px; margin: 0 auto; background-color: #ccc; font-family: Helvetica, Arial, sans-serif; padding: 2em;}
+  #nav-column {width:18%; float:left; padding: 5px;}
+  #page-body {width 78%; float:right;}
+  #header-panel {width: 90%; background-color: #fff; margin: 5px; padding: 20px;}
+  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 4em; line-height: 4.5em;}
+  #header-panel h2 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em;}
+  h1 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; font-weight: 700;}
+  h2 {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.5em; font-weight: 600;}
+  h3 {font-family: Goudy, Times Roman, serif; font-size: 1.5em; line-height: 2em; font-weight: 600;}
+  p {font-size: 1.5em; line-height: 2em; font-weight: 500;}
+  strong {font-weight: 700;}
+  table {width: 100%; margin: 0 auto;}
+  tr {padding: 5px;}
+  td {padding: 5px;}
+  a:link, a:visited {color: orange; border-bottom: 1px dashed;}
+  a:hover, a:active {color: #666; border-bottom: 1px solid;}
+  
 </style>
 <div id="page-container">
-<div id="nav-column" style="width:20%; float:left;">
+<div id="nav-column">
 Nav links will go here
 </div>
-<main id="page-body" style="width 78%; float:right;">
+<main id="page-body">
 <section id="header-panel">
 <h1 id="welcome-to-ist-263">Welcome to IST 263</h1>
   <p>Welcome to IST263 - Intro. to Front-end Web Development at the iSchool.</p>
