--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   table {width: 100%; margin: 0 auto;}
   tr {padding: 5px;}
   td {padding: 5px;}
-  a:link, a:visited {color: orange; border-bottom: 1px dashed;}
-  a:hover, a:active {color: #666; border-bottom: 1px solid;}
+  a:link, a:visited {color: orange; text-decoration: none; border-bottom: 1px dashed;}
+  a:hover, a:active {color: #666; text-decoration: none; border-bottom: 1px solid;}
   
 </style>
 <div id="page-container">
