--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   #page-container {max-width:1024px; margin: 0 auto; background-color: #ccc; font-family: Helvetica, Arial, sans-serif; padding: 2em;}
   #nav-column {width:18%; float:left; padding: 5px;}
   #page-body {width 78%; float:right;}
-  #header-panel {width: 90%; background-color: #fff; margin: 5px; padding: 10px;}
-  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3.5em;}
-  #header-panel h2 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em;}
+  #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 10px;}
+  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3.5em; margin: 0 auto;}
+  #header-panel h2 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; margin: 0 auto;}
   h1 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; font-weight: 700;}
   h2 {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.5em; font-weight: 600;}
   h3 {font-family: Goudy, Times Roman, serif; font-size: 1.5em; line-height: 2em; font-weight: 600;}
@@ -13,6 +13,7 @@
   table {width: 100%; margin: 0 auto;}
   tr {padding: 5px;}
   td {padding: 5px;}
+  a {text-decoration: none;}
   a:link, a:visited {color: orange; text-decoration: none; border-bottom: 1px dashed;}
   a:hover, a:active {color: #666; text-decoration: none; border-bottom: 1px solid;}
   
@@ -24,7 +25,7 @@ Nav links will go here
 <main id="page-body">
 <section id="header-panel">
 <h1 id="welcome-to-ist-263">Welcome to IST 263</h1>
-  <p>Welcome to IST263 - Intro. to Front-end Web Development at the iSchool.</p>
+  <h2>Intro. to Front-end Web Development at the iSchool.</h2>
 </section>
 <section id="schedule">
 <h2 id="schedule-overview">Schedule Overview</h2>
