--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   #nav-column {width:18%; float:left; padding: 5px;}
   #page-body {width 78%; float:right;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 10px;}
-  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3.5em; margin: 0 auto;}
-  #header-panel h2 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; margin: 0 auto;}
+  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3.5em; text-align: center;}
+  #header-panel h2 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; text-align: center;}
   h1 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; font-weight: 700;}
   h2 {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.5em; font-weight: 600;}
   h3 {font-family: Goudy, Times Roman, serif; font-size: 1.5em; line-height: 2em; font-weight: 600;}
@@ -14,9 +14,9 @@
   tr {padding: 5px;}
   td {padding: 5px;}
   a {text-decoration: none;}
-  a:link, a:visited {color: orange; text-decoration: none; border-bottom: 1px dashed;}
+  a:link, a:visited {color: orange; font-weight: 600; text-decoration: none; border-bottom: 1px dashed;}
   a:hover, a:active {color: #666; text-decoration: none; border-bottom: 1px solid;}
-  
+  code {font-family: "Courier New", Courier, monospace; font-size: 1.5em;}
 </style>
 <div id="page-container">
 <div id="nav-column">
@@ -25,7 +25,7 @@ Nav links will go here
 <main id="page-body">
 <section id="header-panel">
 <h1 id="welcome-to-ist-263">Welcome to IST 263</h1>
-  <h2>Intro. to Front-end Web Development at the iSchool.</h2>
+  <h2>Intro. to Front-end Web Development at the iSchool</h2>
 </section>
 <section id="schedule">
 <h2 id="schedule-overview">Schedule Overview</h2>
