--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <style>
-  #page-container {max-width:1024px; margin: 0 auto; background-color: #ccc; font-family: Helvetica, Arial, sans-serif; padding: 2em;}
+  #page-container {max-width:1024px; margin: 0 auto; background-color: #f1f1f1; font-family: Helvetica, Arial, sans-serif; padding: 2em;}
   #nav-column {width:18%; float:left; padding: 5px;}
   #page-body {width 78%; float:right;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 10px;}
