--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   #nav-column {width:18%; float:left; padding: 5px;}
   #page-body {width 78%; float:right;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 10px;}
-  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3.5em; text-align: center;}
+  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3.5em; text-align: center;  color: #6F777D;}
   #header-panel h2 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; text-align: center;}
-  h1 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; font-weight: 700;}
-  h2 {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.5em; font-weight: 600;}
-  h3 {font-family: Goudy, Times Roman, serif; font-size: 1.5em; line-height: 2em; font-weight: 600;}
+  h1 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; font-weight: 700; color: #6F777D;}
+  h2 {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.5em; font-weight: 600; color: #6F777D;}
+  h3 {font-family: Goudy, Times Roman, serif; font-size: 1.5em; line-height: 2em; font-weight: 600; color: #6F777D;}
   p {font-size: 1.5em; line-height: 2em; font-weight: 500;}
   strong {font-weight: 700;}
   table {width: 100%; margin: 0 auto;}
@@ -15,8 +15,8 @@
   td {padding: 5px;}
   th {text-align: left;}
   a {text-decoration: none;}
-  a:link, a:visited {color: orange; font-weight: 600; text-decoration: none; border-bottom: 1px dashed;}
-  a:hover, a:active {color: #666; text-decoration: none; border-bottom: 1px solid;}
+  a:link, a:visited {color: #D44500; font-weight: 600; text-decoration: none; border-bottom: 1px dashed;}
+  a:hover, a:active {color: ##6F777D; text-decoration: none; border-bottom: 1px solid;}
   code {font-family: "Courier New", Courier, monospace; font-size: 1.5em;}
 </style>
 <div id="page-container">
