--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <style>
   #page-container {max-width:1024px; margin: 0 auto; background-color: #f1f1f1; font-family: Helvetica, Arial, sans-serif; padding: 2em;}
   #nav-column {width:18%; float:left; padding: 5px;}
-  #page-body {width 78%; float:right;}
+  #page-body {width: 78%; float:right;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 10px;}
   #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3.5em; text-align: center;  color: #6F777D;}
   #header-panel h2 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; text-align: center;}
