--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <style>
-  #page-container {max-width:1024px; margin: 0 auto; background-color: #f1f1f1; font-family: Helvetica, Arial, sans-serif; padding: 2em;}
-  #nav-column {width:18%; float:left; padding: 5px;}
-  #page-body {width: 78%; float:right;}
+  #page-container {max-width:1024px; margin: 0 auto; font-family: Helvetica, Arial, sans-serif; padding: 0.5em;}
+  #nav-column {width:18%; float:left; padding: 5px; background-color: #f1f1f1; }
+  #page-body {width: 78%; float:right; background-color: #f1f1f1;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 10px;}
-  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3.5em; text-align: center;  color: #6F777D;}
-  #header-panel h2 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; text-align: center;}
-  h1 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; font-weight: 700; color: #6F777D;}
-  h2 {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.5em; font-weight: 600; color: #6F777D;}
+  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3.2em; text-align: center;  color: #D44500;}
+  #header-panel p {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.2em; text-align: center;}
+  footer {width: 100%; clear: both; padding: 2em; text-align: center;}
+  h1 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; font-weight: 700; color: #D44500;}
+  h2 {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.5em; font-weight: 600; color: #D44500;}
   h3 {font-family: Goudy, Times Roman, serif; font-size: 1.5em; line-height: 2em; font-weight: 600; color: #6F777D;}
   p {font-size: 1.5em; line-height: 2em; font-weight: 500;}
   strong {font-weight: 700;}
@@ -14,7 +15,7 @@
   tr {padding: 5px;}
   td {padding: 5px;}
   th {text-align: left;}
-  a {text-decoration: none;}
+  a {color: #D44500; text-decoration: none;}
   a:link, a:visited {color: #D44500; font-weight: 600; text-decoration: none; border-bottom: 1px dashed;}
   a:hover, a:active {color: ##6F777D; text-decoration: none; border-bottom: 1px solid;}
   code {font-family: "Courier New", Courier, monospace; font-size: 1.5em;}
@@ -26,7 +27,7 @@ Nav links will go here
 <main id="page-body">
 <section id="header-panel">
 <h1 id="welcome-to-ist-263">Welcome to IST 263</h1>
-  <h2>Intro. to Front-end Web Development at the iSchool</h2>
+  <p>Intro. to Front-end Web Development</p>
 </section>
 <section id="schedule">
 <h2 id="schedule-overview">Schedule Overview</h2>
