--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <style>
-  #page-container {max-width:1024px; margin: 0 auto; font-family: Helvetica, Arial, sans-serif; padding: 0.5em;}
+  #page-container {max-width:1024px; margin: 0 auto; font-family: Helvetica, Arial, sans-serif; color: #3E3D3C; padding: 0.5em;}
   #nav-column {width:18%; float:left; padding: 5px; background-color: #f1f1f1; }
   #page-body {width: 78%; float:right; background-color: #f1f1f1;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 10px;}
