--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   #page-container {max-width:1024px; margin: 0 auto; font-family: Helvetica, Arial, sans-serif; color: #3E3D3C; padding: 0.5em;}
   #nav-column {width:18%; float:left; padding: 5px; background-color: #f1f1f1; }
   #page-body {width: 78%; float:right; background-color: #f1f1f1;}
-  #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 10px;}
-  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; line-height: 3.2em; text-align: center;  color: #D44500;}
-  #header-panel p {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.2em; text-align: center;}
+  #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 0.5em;}
+  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; text-align: center;  color: #D44500;}
+  #header-panel p {font-family: Goudy, Times Roman, serif; font-size: 2em; text-align: center;}
   footer {width: 100%; clear: both; padding: 2em; text-align: center;}
   h1 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; font-weight: 700; color: #D44500;}
   h2 {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.5em; font-weight: 600; color: #D44500;}
