--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <style>
   #page-container {max-width:1024px; margin: 0 auto; font-family: Helvetica, Arial, sans-serif; color: #3E3D3C; padding: 0.5em;}
   #nav-column {width:18%; float:left; padding: 5px; background-color: #f1f1f1; }
+  #nav-column ul {list-style: none;}
   #page-body {width: 78%; float:right; background-color: #f1f1f1;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 0.5em;}
   #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; text-align: center;  color: #D44500;}
@@ -22,14 +23,21 @@
 </style>
 <div id="page-container">
 <div id="nav-column">
-Nav links will go here
+<ul>
+  <li><a href="/fall2019-m01/">Course Home Page</a></li>
+  <li><a href="/fall2019-m01/index.html#schedule">Course Schedule</a></li>
+  <li><a href="/fall2019-m01/syllabus.html">Syllabus</a></li>
+  <li><a href="/fall2019-m01/computer-setup.html">Computer Setup</a></li>
+  <li><a href="/fall2019-m01/individual-project.html">Individual Project</a></li>
+  <li><a href="/fall2019-m01/question-bank.html">Question Bank</a></li>
+</ul>
 </div>
 <main id="page-body">
 <section id="header-panel">
 <h1 id="welcome-to-ist-263">Welcome to IST 263</h1>
   <p>Intro. to Front-end Web Development</p>
 </section>
-<section id="schedule">
+<a name="schedule"></a><section id="schedule">
 <h2 id="schedule-overview">Schedule Overview</h2>
 <table>
 <thead>
