--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div id="page-container">
 <div id="nav-column">
 <ul>
-  <li><a href="/fall2019-m01/">Course Home Page</a></li>
+  <li><a href="/fall2019-m01/">Course Home</a></li>
   <li><a href="/fall2019-m01/index.html#schedule">Course Schedule</a></li>
   <li><a href="/fall2019-m01/syllabus.html">Syllabus</a></li>
   <li><a href="/fall2019-m01/computer-setup.html">Computer Setup</a></li>
