--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <style>
   #page-container {max-width:1024px; margin: 0 auto; font-family: Helvetica, Arial, sans-serif; color: #3E3D3C; padding: 0.5em;}
   #nav-column {width:18%; float:left; padding: 5px; background-color: #f1f1f1; }
-  #nav-column ul {list-style: none;}
-  #nav-column a:link, #nav-column a:visited {color: #D44500; font-weight: 500; text-decoration: none; border-bottom: 1px dashed; margin-left: 0;}
-  #nav-column a:hover, #nav-column a:active {color: ##6F777D; font-weight: 500; text-decoration: none; border-bottom: 1px solid; margin-left: 0;}
-  #page-body {width: 78%; float:right; background-color: #f1f1f1;}
+  #nav-column ul {list-style: none; margin-left: 0;}
+  #nav-column a:link, #nav-column a:visited {color: #D44500; font-weight: 500; text-decoration: none; margin-left: 0;}
+  #nav-column a:hover, #nav-column a:active {color: ##6F777D; font-weight: 500; text-decoration: underline; margin-left: 0;}
+  #page-body {width: 78%; float:right; background-color: #f1f1f1; padding: 0.5em;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 0.5em;}
   #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; text-align: center;  color: #D44500;}
   #header-panel p {font-family: Goudy, Times Roman, serif; font-size: 2em; text-align: center;}
