--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   #nav-column {width:18%; float:left; padding: 5px; background-color: #f1f1f1; }
   #nav-column ul {list-style: none; margin-left: -5px;}
   #nav-column a:link, #nav-column a:visited {color: #D44500; font-weight: 500; text-decoration: none; border: none; margin-left: 0;}
-  #nav-column a:hover, #nav-column a:active {color: ##6F777D; font-weight: 500; text-decoration: underline; border: none; margin-left: 0;}
+  #nav-column a:hover, #nav-column a:active {color: #6F777D; font-weight: 500; text-decoration: underline; border: none; margin-left: 0;}
   #page-body {width: 78%; float:right; background-color: #f1f1f1; padding: 0.5em;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 0.5em;}
   #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; text-align: center;  color: #D44500; padding: 0;}
