--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   #page-body {width: 78%; float:right; background-color: #f1f1f1; padding: 0.5em;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 0.5em;}
   #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; text-align: center;  color: #D44500; padding: 0;}
-  #header-panel p {font-family: Goudy, Times Roman, serif; font-size: 2em; text-align: center; padding: 0;}
+  #header-panel p {font-family: Goudy, Times Roman, serif; font-size: 2em; text-align: center; padding: 0; color:  #6F777D;}
   footer {width: 100%; clear: both; padding: 2em; text-align: center;}
   h1 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; font-weight: 700; color: #D44500;}
   h2 {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.5em; font-weight: 600; color: #D44500;}
