--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   a:hover, a:active {color: #6F777D; text-decoration: none; border-bottom: 1px solid;}
   code {font-family: "Courier New", Courier, monospace; font-size: 1.5em;}
 </style>
+<title>IST263 - Intro. to Front End Web Development - Syracuse University iSchool</title>
 <div id="page-container">
 <div id="nav-column">
 <ul>
