--- a/base-page-template.html
+++ b/base-page-template.html
@@ -1,3 +1,28 @@
+<style>
+  #page-container {max-width:1024px; margin: 0 auto; font-family: Helvetica, Arial, sans-serif; color: #3E3D3C; padding: 0.5em;}
+  #nav-column {width:18%; float:left; padding: 5px; background-color: #f1f1f1; }
+  #nav-column ul {list-style: none; margin-left: -5px;}
+  #nav-column a:link, #nav-column a:visited {color: #D44500; font-weight: 500; text-decoration: none; border: none; margin-left: 0;}
+  #nav-column a:hover, #nav-column a:active {color: #6F777D; font-weight: 500; text-decoration: underline; border: none; margin-left: 0;}
+  #page-body {width: 78%; float:right; background-color: #f1f1f1; padding: 0.5em;}
+  #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 0.5em;}
+  #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; text-align: center;  color: #D44500; padding: 0;}
+  #header-panel p {font-family: Goudy, Times Roman, serif; font-size: 2em; text-align: center; padding: 0; color:  #6F777D;}
+  footer {width: 100%; clear: both; padding: 2em; text-align: center;}
+  h1 {font-family: Goudy, Times Roman, serif; font-size: 2.5em; line-height: 3em; font-weight: 700; color: #D44500;}
+  h2 {font-family: Goudy, Times Roman, serif; font-size: 2em; line-height: 2.5em; font-weight: 600; color: #D44500;}
+  h3 {font-family: Goudy, Times Roman, serif; font-size: 1.5em; line-height: 2em; font-weight: 600; color: #6F777D;}
+  p {font-size: 1.2em; line-height: 1.5em; font-weight: 500;}
+  strong {font-weight: 700;}
+  table {width: 100%; margin: 0 auto;}
+  tr {padding: 5px;}
+  td {padding: 5px;}
+  th {text-align: left;}
+  a {color: #D44500; text-decoration: none;}
+  a:link, a:visited {color: #D44500; font-weight: 600; text-decoration: none; border-bottom: 1px dashed;}
+  a:hover, a:active {color: #6F777D; text-decoration: none; border-bottom: 1px solid;}
+  code {font-family: "Courier New", Courier, monospace; font-size: 1.5em;}
+</style>
 <div id="page-container" style="width:1024px; margin: 0 auto;">
 <div id="nav-column" style="width:20%; float:left;">
 Nav links will go here
