--- a/computer-setup.html
+++ b/computer-setup.html
@@ -1,3 +1,6 @@
+<style>
+    @import url("/fall2019-m01/ist263-talley.css");
+</style>
 <div id="page-container" style="width:1024px; margin: 0 auto;">
 <div id="nav-column" style="width:20%; float:left;">
 Nav links will go here
