--- a/computer-setup.html
+++ b/computer-setup.html
@@ -1,6 +1,7 @@
 <style>
     @import url("/fall2019-m01/ist263-talley.css");
 </style>
+<title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
 <div id="page-container">
 <div id="nav-column">
 <ul>
