--- a/individual-project.html
+++ b/individual-project.html
@@ -1,6 +1,17 @@
-<div id="page-container" style="width:1024px; margin: 0 auto;">
-<div id="nav-column" style="width:20%; float:left;">
-Nav links will go here
+<style>
+    @import url("/fall2019-m01/ist263-talley.css");
+</style>
+<title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
+<div id="page-container">
+<div id="nav-column">
+<ul>
+  <li><a href="/fall2019-m01/">Course Home</a></li>
+  <li><a href="/fall2019-m01/index.html#schedule">Course Schedule</a></li>
+  <li><a href="/fall2019-m01/syllabus.html">Syllabus</a></li>
+  <li><a href="/fall2019-m01/computer-setup.html">Computer Setup</a></li>
+  <li><a href="/fall2019-m01/individual-project.html">Individual Project</a></li>
+  <li><a href="/fall2019-m01/question-bank.html">Question Bank</a></li>
+</ul>
 </div>
 <div role="main" id="page-content" style="width 78%; float:right;">
 <section id="header-panel">
