--- a/individual-project.html
+++ b/individual-project.html
@@ -13,7 +13,7 @@
   <li><a href="/fall2019-m01/question-bank.html">Question Bank</a></li>
 </ul>
 </div>
-<div role="main" id="page-content" style="width 78%; float:right;">
+<div role="main" id="page-content">
 <section id="header-panel">
 <h1>Individual Project</h1>
 <h2 id="due-date">Due 04/27/2018 23:59:59</h2>
