--- a/syllabus.html
+++ b/syllabus.html
@@ -13,7 +13,7 @@
   <li><a href="/fall2019-m01/question-bank.html">Question Bank</a></li>
 </ul>
 </div>
-<main id="page-content">
+<div role="main" id="page-content">
 <section id="header-panel">
 <h1 id="heading1">Syllabus</h1>
 </section>
@@ -212,7 +212,7 @@ Syracuse University’s Blackboard system will be used for announcements. You ca
 <p><strong>Use of Blackboard</strong></p>
 <p>This course involves the use of Syracuse University’s Blackboard system as an online tool. The environment is composed of a number of elements that will help you be successful in both your current coursework and your lifelong learning opportunities. To access Blackboard at <a href="http://blackboard.syr.edu">http://blackboard.syr.edu</a> use your Syracuse University NetID & Password.  This specific course will appear in your course list.</p>
 <p>To search for answers to your Blackboard questions, visit the Answers self-help knowledge at <a href="https://answers.syr.edu/display/blackboard01/Blackboard">https://answers.syr.edu/display/blackboard01/Blackboard</a>.</p>  If you have problems logging in or need assistance with Blackboard, contact the ITS Service Center at: help@syr.edu or 315.443.2677.  The Syracuse University Blackboard support team will assist you.</p>
-</main>
+</div>
     <footer class="col-md-12 text-center">
         
         <hr>
