--- a/syllabus.html
+++ b/syllabus.html
@@ -45,8 +45,8 @@ ____________________________________________________________________________
 <li>Understand at an intermediate or expert level key Web technologies including HTML, CSS, Javascript</li>
 <li>Consider entrepreneurial opportunities in respect to web design, issues such as web 2.0, HTML5, web technologies and related issues</li>
 </p>
-<a name="course-requirements"><h3>Course Requirements and Expectations</h3>
-    <p><strong>Assignments</p></strong></p>
+<a name="course-requirements"></a><h3>Course Requirements and Expectations</h3>
+<p><strong>Assignments</p></strong></p>
 <table cellpadding="5px" cell spacing="5px">
 <thead>
 <tr>
@@ -83,7 +83,7 @@ ____________________________________________________________________________
 <td>100</td>
 </tr>
 </table>
-    <p><strong>Midterm&nbsp;Exam</strong></p>
+<p><strong>Midterm&nbsp;Exam</strong></p>
 <p>This will be a closed book exam. This is used to evaluate your recall and understanding of course material, as well as your ability to apply it to new situations.</td
 
 <p><strong>Weekly Assignments</strong></p>
