--- a/individual-project.html
+++ b/individual-project.html
@@ -16,7 +16,7 @@
 <div role="main" id="page-content">
 <section id="header-panel">
 <h1>Individual Project</h1>
-<p id="due-date">Due 04/27/2018 23:59:59</p>
+<p>Due 04/27/2018 23:59:59</p>
 </section>
 <section id="page-body">
 <p>This assignment is intended to demonstrate your level of mastery of the course material. You will have a total of 12 weeks to complete the project with deliverables that are due almost every week. Refer to the <a href="#meeting-milestones">Meeting Milestones</a> section for details.</p>
