--- a/individual-project.html
+++ b/individual-project.html
@@ -19,7 +19,8 @@
 </section>
 <section id="page-body">
 <h2>Due 12/07/2018 23:59:59</h2>
-<p>This assignment is intended to demonstrate your level of mastery of the course material. You will have a total of 12 weeks to complete the project with deliverables that are due almost every week. Refer to the <a href="#meeting-milestones">Meeting Milestones</a> section for details.</p>
+<p>This assignment is intended to demonstrate your level of mastery of the course material. You will have a total of 12 weeks to complete the project with deliverables that are due almost every week. Refer to the <a href="#meeting-
+    s">Meeting Milestones</a> section for details.</p>
 <h2 id="what-is-the-individual-project">What is the individual project?</h2>
 <p>Your goal is to design and develop a website on a topic that interests you. The website needs to have a minimum of 3 pages with unique layouts. An ideal topic will have the following qualities</p>
 <ul>
@@ -27,7 +28,7 @@
 <li>Easy to find images, video and other multimedia resources</li>
 <li>Something that you can showcase during an internship or job interview</li>
 </ul>
-    <a name="#meeting-milestones"></a><h2 id="how-to-submit-website-other-deliverables">How to submit website &amp; other deliverables?</h2>
+    <a name="meeting-milestones"></a><h2 id="how-to-submit-website-other-deliverables">How to submit website &amp; other deliverables?</h2>
 <p>Similar to you weekly assignments, the project and all deliberables must be submitted via GitHub. Project documents that is emailed or submitted via Blackboard will receive 0 points.</p>
 <h3 id="grading-rubrik-and-project-milestones">Grading rubrik and Project Milestones</h3>
 <p>This project has a total point value of 50. This is divided as follows</p>
