--- a/computer-setup.html
+++ b/computer-setup.html
@@ -13,11 +13,11 @@
   <li><a href="/fall2019-m01/question-bank.html">Question Bank</a></li>
 </ul>
 </div>
-<div role="main" id="page-content">
+<div role="main" id="page-body">
 <section id="header-panel">
 <h1>Computer Setup for IST263</h1>
 </section>
-<section id="page-body">
+<section id="page-content">
 <p>In this class you will use tools and workflows that web developers use in the industry. Also, it is a lot more efficient
 than using the typical LMS. It will seem foreign when you start but be a little patient &amp; persistant.</p>
 <h2 id="1-integrated-development-environment-ide">1. Integrated Development Environment (IDE)</h2>
