--- a/individual-project.html
+++ b/individual-project.html
@@ -13,11 +13,11 @@
   <li><a href="/fall2019-m01/question-bank.html">Question Bank</a></li>
 </ul>
 </div>
-<div role="main" id="page-content">
+<div role="main" id="page-body">
 <section id="header-panel">
 <h1>Individual Project</h1>
 </section>
-<section id="page-body">
+<section id="page-content">
 <h2>Due 12/07/2018 23:59:59</h2>
 <p>This assignment is intended to demonstrate your level of mastery of the course material. You will have a total of 12 weeks to complete the project with deliverables that are due almost every week. Refer to the <a href="#meeting-
     s">Meeting Milestones</a> section for details.</p>
