--- a/syllabus.html
+++ b/syllabus.html
@@ -13,11 +13,11 @@
   <li><a href="/fall2019-m01/question-bank.html">Question Bank</a></li>
 </ul>
 </div>
-<div role="main" id="page-content">
+<div role="main" id="page-body">
 <section id="header-panel">
 <h1 id="heading1">Syllabus</h1>
 </section>
-<section id="page-body">
+<section id="page-content">
 <p>Instructor: David Talley<br/>
 Office: Hinds Hall 239<br/>
 Office Hours: Thursdays, 11am-noon EST<br/>
