--- a/base-page-template.html
+++ b/base-page-template.html
@@ -14,11 +14,11 @@
   <li><a href="/fall2019-m01/question-bank.html">Question Bank</a></li>
 </ul>
 </div>
-<div role="main" id="page-content">
+<div role="main" id="page-body">
 <section id="header-panel">
 <h1>Main Page Title</h1>
 </section>
-<section id="page-body">
+<section id="page-content">
 
 </div>
 </section>
