--- a/question-bank.html
+++ b/question-bank.html
@@ -16,7 +16,7 @@
 </div>
 <div role="main" id="page-body">
 <section id="header-panel">
-<h1>Main Page Title</h1>
+<h1>Question Bank</h1>
 </section>
 <section id="page-content">
 <p>The mid-term exam questions will be picked from this question bank. As part of SAGE each student will be required to post 1-2 questions that they think should be on the mid-term from that week's topic.</p>
