--- a/question-bank.html
+++ b/question-bank.html
@@ -21,7 +21,7 @@
 <section id="page-content">
 <p>The mid-term exam questions will be picked from this question bank. As part of SAGE each student will be required to post 1-2 questions that they think should be on the mid-term from that week's topic.</p>
 <p>I will compile and update the list every week.</p>
-<h1 id="spring-2019">Spring 2019</h1>
+<h2 id="spring-2019">Fall 2019</h2>
 <h2 id="week-1-anatomy-of-the-web">Week 1 - Anatomy of the Web</h2>
 
 content to come<!--
