--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 </style>
 <title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
 <div id="page-container">
+<div id="top-banner">
+<img src="/fall2019-m01/block-s.png" alt="Syracuse University"/>
+  <div id="logo-container">
+  <img src="/fall2019-m01/ischool-logo.jpg" alt="Syracuse University School of Information Studies"/>
+  </div>
 <div id="nav-column">
 <ul>
   <li><a href="/fall2019-m01/">Course Home</a></li>
