--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
     @import url("/fall2019-m01/ist263-talley.css");
 </style>
 <title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
-<div id="page-container">
+
 <div id="top-banner">
-<img src="/fall2019-m01/block-s.png" alt="Syracuse University"/>
+  <img src="/fall2019-m01/block-s.png" alt="Syracuse University"/>
   <div id="logo-container">
   <img src="/fall2019-m01/ischool-logo.jpg" alt="Syracuse University School of Information Studies"/>
   </div>
+</div>
 <div id="nav-column">
 <ul>
   <li><a href="/fall2019-m01/">Course Home</a></li>
