--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div id="top-banner">
   <img src="/fall2019-m01/block-s.png" alt="Syracuse University"/>
   <div id="logo-container">
-  <img src="/fall2019-m01/ischool-logo.jpg" alt="Syracuse University School of Information Studies"/>
+  <img src="/fall2019-m01/ischool-logo.jpg" alt="Syracuse University School of Information Studies" height="90%"/>
   </div>
 </div>
 <div id="nav-column">
