--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
 
 <div id="top-banner">
-  <img src="/fall2019-m01/block-s.png" alt="Syracuse University"/>
+  <img src="/fall2019-m01/block-s.png" alt="Syracuse University" height="90%"/>
   <div id="logo-container">
-  <img src="/fall2019-m01/ischool-logo.jpg" alt="Syracuse University School of Information Studies" height="90%"/>
+  <img src="/fall2019-m01/ischool-logo.jpg" alt="Syracuse University School of Information Studies"/>
   </div>
 </div>
 <div id="nav-column">
