--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
 
 <div id="top-banner">
-  <img src="/fall2019-m01/block-s.png" alt="Syracuse University" height="53" style="padding:4px 0;"/>
+  <img src="/fall2019-m01/block-s.png" alt="Syracuse University" height="53" style="padding:4px 0 4px 10px;"/>
   <div id="logo-container">
   <img src="/fall2019-m01/ischool-logo.jpg" alt="Syracuse University School of Information Studies"/>
   </div>
