--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <div id="top-banner">
   <img src="/fall2019-m01/block-s.png" alt="Syracuse University" height="53"/>
   <div id="logo-container">
-  <img src="/fall2019-m01/ischool-logo.jpg" alt="Syracuse University School of Information Studies"/>
+      <a href="http://ischool.syr.edu">
+      <img src="/fall2019-m01/ischool-logo.jpg" alt="Syracuse University School of Information Studies"/>
+      </a>
   </div>
 </div>
 <div id="nav-column">
