--- a/question-bank.html
+++ b/question-bank.html
@@ -3,6 +3,14 @@
     @import url("/fall2019-m01/ist263-talley.css");
 </style>
 <title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
+<div id="top-banner">
+  <img src="/fall2019-m01/block-s.png" alt="Syracuse University" height="53"/>
+  <div id="logo-container">
+      <a href="http://ischool.syr.edu">
+      <img src="/fall2019-m01/ischool-logo.jpg" alt="Syracuse University School of Information Studies"/>
+      </a>
+  </div>
+</div>
 <div id="page-container">
 <div id="nav-column">
 <ul>
