--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </a>
   </div>
 </div>
-<div ic="page-container">
+<div id="page-container">
 <div id="nav-column">
 <ul>
   <li><a href="/fall2019-m01/">Course Home</a></li>
