--- a/schedule/week01.html
+++ b/schedule/week01.html
@@ -39,7 +39,7 @@
 <p>We will go over the course syllabus. We will spend some time discussing strategies to succeed in this class. Finally, if you haven't setup your computer we will do that. </p>
 <h4 id="slides">Slides</h4>
 <ul>
-<li><a href="../../slides/ist263-w1-1.pdf">Week 01.01 Slides</a></li>
+<li><a href="../slides/ist263-w1-1.pdf">Week 01.01 Slides</a></li>
 </ul>
 <h4 id="group-activity-lab">Group Activity / Lab</h4>
 <ul>
