--- a/schedule/week01.html
+++ b/schedule/week01.html
@@ -39,7 +39,7 @@
 <p>We will go over the course syllabus. We will spend some time discussing strategies to succeed in this class. Finally, if you haven't setup your computer we will do that. </p>
 <h4 id="slides">Slides</h4>
 <ul>
-<li><a href="../slides/IST263-W01.1.pdf">Week 01.01 Slides</a></li>
+<li><a href="../slides/IST263-talley-W01.1.pdf">Week 01.01 Slides</a></li>
 </ul>
 <h4 id="group-activity-lab">Group Activity / Lab</h4>
 <ul>
@@ -53,7 +53,7 @@
 </ul>
 <h3 id="slides_1">Slides</h3>
 <ul>
-<li><a href="../../slides/IST263-W01.1.pdf">Week 01.02 Slides</a></li>
+<li><a href="../../slides/IST263-talley-W01.2.pdf">Week 01.02 Slides</a></li>
 </ul>
 <h4 id="post-class-readings">Post Class Readings</h4>
 <ul>
