--- a/schedule/week01.html
+++ b/schedule/week01.html
@@ -53,7 +53,7 @@
 </ul>
 <h3 id="slides_1">Slides</h3>
 <ul>
-<li><a href="../../slides/IST263-talley-W01.2.pdf">Week 01.02 Slides</a></li>
+<li><a href="/../slides/IST263-talley-W01.2.pdf">Week 01.02 Slides</a></li>
 </ul>
 <h4 id="post-class-readings">Post Class Readings</h4>
 <ul>
