--- a/schedule/week01.html
+++ b/schedule/week01.html
@@ -56,10 +56,10 @@
 <li><a href="../slides/IST263-talley-W01.2.pdf">Week 01.02 Slides</a></li>
 </ul>
 <h4 id="post-class-readings">Post Class Readings</h4>
+    <p><strong>Note:</strong> Content is divided to multiple pages. Click through using the "Next Page >" button at lower right.</p>
 <ul>
 <li><a href="https://www.tutorialspoint.com/web_developers_guide/web_basic_concepts.htm" target="_blank">Web - Basic Concepts</a></li>
-<li><a target="_blank" href="https://www.tutorialspoint.com/web_developers_guide/web_how_it_works.htm">How does the web work?</a><br/>
-    <strong>Note:</strong> Content is divided to multiple pages. Click through using the "Next Page >" button at lower right.
+<li><a target="_blank" href="https://www.tutorialspoint.com/web_developers_guide/web_how_it_works.htm">How does the web work?</a>
 </li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=scWj1BMRHUA">Video - The Web is not the Net</a></li>
 </ul>
