--- a/schedule/week03.html
+++ b/schedule/week03.html
@@ -23,10 +23,42 @@
 </div>
 <div role="main" id="page-body">
 <section id="header-panel">
-<h1>Main Page Title</h1>
+<h1 id="week-03">Week 03 &ndash; More HTML</h1>
 </section>
 <section id="page-content">
-
+<h2 id="learning-outcomes">Learning Outcomes</h2>
+<p>After this week you should be able to </p>
+<ul>
+<li>Create, edit and view hypertext documents</li>
+</ul>
+<hr />
+<h2 id="0301">03.01</h2>
+<h3 id="pre-class-reading">Pre-Class Reading</h3>
+<ul>
+<li><a href="https://ryanstutorials.net/html-tutorial/html-links.php">Links</a></li>
+</ul>
+<h3 id="class-slides">Class Slides</h3>
+<ul>
+<li>To Come<!--a href="../slides/ist263-w3-1.pdf">Week 3.1 Slides</a></li-->
+</ul>
+<hr />
+<h2 id="0302">03.02</h2>
+<h3 id="pre-class-reading_1">Pre Class Reading</h3>
+<ul>
+<li><a href="https://www.w3schools.com/html/html_quiz.asp">HTML Quiz</a>  </li>
+<li>For this class' summary tell me something that is still confusing</li>
+</ul>
+<h3 id="group-activity-lab">Group Activity / Lab</h3>
+<ul>
+To Come<!--li>Our solar system. See details in your class' <code>week-03/02/labs</code> folder</li-->
+</ul>
+<h3 id="post-class-reading">Post-Class Reading</h3>
+<ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">HTML Tags</a></li>
+</ul>
+<!--h3 id="homework-due-this-week">Homework due this week</h3>
+<p>Look in the class folder under <code>week-03/02/after-class/index.html</code></p-->
+</div>
 
 </section>
 </div>
@@ -38,4 +70,3 @@
         
     </footer>
 </div>
-© 2019 GitHub, Inc.
