--- a/schedule/week04.html
+++ b/schedule/week04.html
@@ -26,7 +26,55 @@
 <h1>Main Page Title</h1>
 </section>
 <section id="page-content">
-
+<h1 id="week-04-css">Week 04 &ndash; CSS</h1>
+<h2 id="learning-outcomes">Learning Outcomes</h2>
+<p>After this week you should be able to </p>
+<ul>
+<li>Describe CSS</li>
+<li>Write CSS to style hypertext documents</li>
+<li>Use Chrome Developer console</li>
+</ul>
+<hr />
+<h2 id="0401-intro-to-css">04.01 Intro. to CSS</h2>
+<h3 id="pre-class-reading">Pre-Class Reading</h3>
+<ul>
+<li><a href="https://www.w3schools.com/css/css_intro.asp">CSS Introduction</a></li>
+<li>Review the file <code>week-04/01/index.html</code> in your course folder</li>
+</ul>
+<h3 id="class-slides">Class Slides</h3>
+<ul>
+<li>To Come<!--a href="../slides/ist263-w4-1.pdf">Week 4.1 Slides</a--></li>
+</ul>
+<h3 id="group-activty-lab">Group Activty / Lab</h3>
+<ul>
+<li>Look for details in the <code>labs</code> folder for this week</li>
+</ul>
+<h3 id="post-class-reading">Post-Class Reading</h3>
+<ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS">CSS Tutorial on MDN</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/How_CSS_works">How CSS works</a></li>
+</ul>
+<hr />
+<h2 id="0402-more-css">04.02 More CSS</h2>
+<h3 id="pre-class-reading_1">Pre-Class Reading</h3>
+<p><!-- - <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Selectors">Selectors</a>  -->
+- <a href="https://www.w3schools.com/css/css_border.asp">CSS Borders</a><br />
+- Review the file <code>week-04/02/index.html</code> in your course folder</p>
+<h3 id="class-slides_1">Class Slides</h3>
+<ul>
+<li><a href="../slides/ist263-w4-2.pdf">Week 4.2 Slides</a></li>
+</ul>
+<h3 id="group-activty-lab_1">Group Activty / Lab</h3>
+<ul>
+<li>Format the letter from Week02</li>
+</ul>
+<h3 id="post-class-reading_1">Post-Class Reading</h3>
+<ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">CSS Reference</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Box_model">Box Model</a>. Look through the sample files and experiment with CSS short-hand    </li>
+</ul>
+<h3 id="homework-due-this-week">Homework due this week</h3>
+<p>Look in the class folder under <code>week-04/02/index.html</code></p>
 
 </section>
 </div>
@@ -38,4 +86,3 @@
         
     </footer>
 </div>
-© 2019 GitHub, Inc.
