--- a/schedule/week02.html
+++ b/schedule/week02.html
@@ -26,7 +26,7 @@
 <h1>Week 02, HTML</h1>
 </section>
 <section id="page-content">
-<h2 id="learning-outcomes"><i class="fa fa-star"></i>&nbsp;Learning Outcomes</h2>
+<h2 id="learning-outcomes">Learning Outcomes</h2>
 <p>After this week you should be able to </p>
 <ul>
 <li>Describe HTML</li>
@@ -107,4 +107,3 @@
         
     </footer>
 </div>
-© 2019 GitHub, Inc.
