--- a/schedule/week07.html
+++ b/schedule/week07.html
@@ -23,11 +23,32 @@
 </div>
 <div role="main" id="page-body">
 <section id="header-panel">
-<h1>Main Page Title</h1>
+<h1 id="week-7-exam-css-frameworks">Week 7 &ndash; Exam + CSS Frameworks</h1>
 </section>
 <section id="page-content">
-
-
+<h2 id="learning-outcomes">Learning Outcomes</h2>
+<p>After this week you should be able to </p>
+<ul>
+<li>Describe benefits of using a CSS Framework</li>
+</ul>
+<hr />
+<h2 id="class-slides">Class Slides</h2>
+<h3 id="part-71-exam">Part 7.1 - Exam</h3>
+<h3 id="part-72-css-frameworks">Part 7.2 - CSS Frameworks</h3>
+<ul>
+<li>To Come<!--a href="/slides/ist263-w7-2.pdf">Week 7.2 Slides</a--></li>
+</ul>
+<h2 id="post-class">Post-Class</h2>
+<ul>
+<li><a href="https://getbootstrap.com/docs/4.1/getting-started/introduction/">Bootstrap Introduction</a></li>
+</ul>
+<hr />
+<h2 id="homework-due-this-week">Homework due this week</h2>
+<ol>
+<li>Complete SAGE survey (you will receive an email when the window opens)</li>
+<li>Look through homework/readme.txt for this week's homework</li>
+<li>Do the pre-class reading for next class</li>
+</ol>
 </section>
 </div>
     <footer class="col-md-12 text-center">
@@ -38,4 +59,3 @@
         
     </footer>
 </div>
-© 2019 GitHub, Inc.
