--- a/schedule/week06.html
+++ b/schedule/week06.html
@@ -24,7 +24,10 @@
 <div role="main" id="page-body">
 <section id="header-panel">
 <h1 id="week-6-basic-layouts-using-css">Week 6, Basic Layouts using CSS</h1>
-<h2 id="learning-outcomes">&nbsp;Learning Outcomes</h2>
+</section>
+<section id="page-content">
+<h1 id="week-6-basic-layouts-using-css">Week 6 &ndash; Basic Layouts using CSS</h1>
+<h2 id="learning-outcomes">Learning Outcomes</h2>
 <p>After this week you should be able to </p>
 <ul>
 <li>Describe the box model</li>
@@ -34,7 +37,7 @@
 <hr />
 <h2 id="0601">06.01</h2>
 <h3 id="pre-class-reading">Pre-class Reading</h3>
-<p>Read up to and including the 'display property' section<br />
+<p>Read upto and including the 'display property' section<br />
 - <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Introduction">https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Introduction</a>  </p>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
