--- a/schedule/week07.html
+++ b/schedule/week07.html
@@ -32,18 +32,23 @@
 <li>Describe benefits of using a CSS Framework</li>
 </ul>
 <hr />
-<h2 id="class-slides">Class Slides</h2>
+<h2 id="07.01">07.01</h2>
 <h3 id="part-71-exam">Part 7.1 - Exam</h3>
-<h3 id="part-72-css-frameworks">Part 7.2 - CSS Frameworks</h3>
+<p>No preclass or postclass readings or slides</p>
+<hr/>
+<h2 id="07.02">07.02 - CSS Frameworks</h2>
+<ul>
+<h3>No Pre-class Readings</h3>
+<h3 id="class-slides">Class Slides</h3>
 <ul>
 <li>To Come<!--a href="/slides/ist263-w7-2.pdf">Week 7.2 Slides</a--></li>
 </ul>
-<h2 id="post-class">Post-Class</h2>
+<h3 id="post-class">Post-Class Reading</h2>
 <ul>
 <li><a href="https://getbootstrap.com/docs/4.1/getting-started/introduction/">Bootstrap Introduction</a></li>
 </ul>
 <hr />
-<h2 id="homework-due-this-week">Homework due this week</h2>
+<h3 id="homework-due-this-week">Homework due this week</h3>
 <ol>
 <li>Complete SAGE survey (you will receive an email when the window opens)</li>
 <li>Look through homework/readme.txt for this week's homework</li>
