--- a/schedule/week07.html
+++ b/schedule/week07.html
@@ -33,7 +33,7 @@
 </ul>
 <hr />
 <h2 id="07.01">07.01</h2>
-<h3 id="part-71-exam">Part 7.1 - Exam</h3>
+<h3 id="part-71-exam">Part 7.1 - Midterm Exam</h3>
 <p>No preclass or postclass readings or slides</p>
 <hr/>
 <h2 id="07.02">07.02 - CSS Frameworks</h2>
