--- a/schedule/week08.html
+++ b/schedule/week08.html
@@ -23,10 +23,77 @@
 </div>
 <div role="main" id="page-body">
 <section id="header-panel">
-<h1>Main Page Title</h1>
+<h1 id="week-8-responsive-design-boostrap">Week 8 &ndash; Responsive Design &amp; Boostrap</h1>
 </section>
 <section id="page-content">
+<h2 id="learning-outcomes">Learning Outcomes</h2>
+<p>After this week you should be able to </p>
+<ul>
+<li>Make simple responsive layout</li>
+<li>Discuss benefits of PWA</li>
+</ul>
+<hr />
+<h2 id="0801">08.01</h2>
+<h3 id="pre-class-reading">Pre-Class Reading</h3>
+<ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Mozilla/Mobile/Viewport_meta_tag">Viewport</a></li>
+</ul>
+<h3 id="class-slides">Class Slides</h3>
+<ul>
+<li>To Come<!--a href="/slides/responsive-design.pdf">Week 8.1 Slides</a--></li>
+</ul>
+<h3 id="group-activity-lab">Group Activity / Lab</h3>
+<ul>
+<li>No lab this class </li>
+</ul>
+<h3 id="post-class-reading">Post-Class Reading</h3>
+<ul>
+<li><a href="https://www.w3schools.com/css/css_rwd_mediaqueries.asp">Media Queries</a></li>
+</ul>
+<h2 id="0802">08.02</h2>
+<h3 id="pre-class-reading_1">Pre-Class Reading</h3>
+<ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps/Introduction">What is a Progressive Web App?</a></li>
+</ul>
+<h3 id="group-activity-lab_1">Group Activity / Lab</h3>
+<ul>
+<li>Refer to readme.txt in week-08/02/labs</li>
+</ul>
+<h3 id="post-class-reading_1">Post-Class Reading</h3>
+<ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps">PWA</a></li>
+</ul>
+<!--
+#### Part 8.2 - Bootstrap Content
+- [Week 8.2 Slides](/slides/ist263-w8-2.pdf)
 
+<!--
+#### Part 8.2 - Bootstrap Layout
+- [Week 8.2 Slides](/slides/ist263-w8-2.pdf)
+
+
+#### Group Activity / Lab
+- Complete the webpage in lab/lab2.html
+- Define questions to add classes to do
+    - different grids
+    - vertical align
+    - responsive
+
+
+## Post-Class Reading
+- [Bootstrap Typography](https://getbootstrap.com/docs/4.1/content/typography/)
+- [Bootstrap Text](https://getbootstrap.com/docs/4.1/utilities/text/)
+- [Boostrap Colors](https://getbootstrap.com/docs/4.1/utilities/colors/)
+
+---  
+-->
+
+<h3 id="homework-due-this-week">Homework due this week</h2>
+<ol>
+<li>Semantic HTML for your individual project is due by midnight Saturday</li>
+<li>Complete SAGE survey (you will receive an email when the window opens)</li>
+<li>Do the pre-class reading for next class</li>
+</ol>
 
 </section>
 </div>
