--- a/schedule/week08.html
+++ b/schedule/week08.html
@@ -29,7 +29,7 @@
 <h2 id="learning-outcomes">Learning Outcomes</h2>
 <p>After this week you should be able to </p>
 <ul>
-<li>Make simple responsive layout</li>
+<li>Make a simple responsive layout</li>
 <li>Discuss benefits of PWA</li>
 </ul>
 <hr />
