add html, head, body tags

--- a/question-bank.html
+++ b/question-bank.html
@@ -1,8 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<style>
-    @import url("/fall2019-m01/ist263-talley.css");
-</style>
-<title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/fall2019-m01/ist263-talley.css">
+    <title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
+</head>
+
+<body>
 <div id="top-banner">
   <img src="/fall2019-m01/block-s.png" alt="Syracuse University" height="53"/>
   <div id="logo-container">
@@ -97,3 +104,5 @@ content to come<!--
         
     </footer>
 </div>
+</body>
+</html>
