--- a/index.html
+++ b/index.html
@@ -114,30 +114,26 @@
 <td><a href="schedule/week12.html">Bootstrap Layouts</a></td>
 </tr>
 <tr>
-<td>Week 13</td>
-<td>11/19 and 11/21</td>
-<td>Project Help</td>
-</tr>
-<tr>
-<td>Week 14</td>
+<td>&mdash;</td>
 <td>11/25&ndash;11/29 </td>
 <td>Thanksgiving Break - No classes</td>
 </tr>
 <tr>
-<td><a href="schedule/week15.html">Week 15</a></td>
+<td><a href="schedule/week14/">Week 14</a></td>
 <td>12/03 and 12/05</td>
-<td><a href="schedule/week15.html">Javascript Basics, Intro. to jQuery</a></td>
+<td><a href="schedule/week14/">Javascript Basics, Intro. to jQuery</a></td>
+</tr>
+<tr>
+<td><a href="/schedule/week15/">Week 15</a></td>
+<td>12/10 and 12/12</td>
+  <td><a href="/schedule/week15/">Content Management Systems, Project Help</a></td>
 </tr>
 <tr>
 <td><strong>Project Deliverable</strong></td>
-<td>12/07/2019 11:59 PM</td>
+<td>12/14/2019 11:59 PM</td>
 <td><strong>v3 of Project Website</strong></td>
 </tr>
-<tr>
-  <td><a href="/schedule/week16.html">Week 16</a></td>
-<td>12/10</td>
-  <td><a href="/schedule/week16.html">Content Management Systems</a></td>
-</tr>
+
 </tbody>
 </table>
 </section>
