--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 <td><a href="schedule/week-14/">Javascript Basics, Intro. to jQuery</a></td>
 </tr>
 <tr>
-<td><a href="/schedule/week-15/">Week 15</a></td>
+<td>Week 15</td>
 <td>12/10 and 12/12</td>
-  <td><a href="/schedule/week-15/">Content Management Systems, Project Help</a></td>
+  <td>Content Management Systems, Project Help</td>
 </tr>
 <tr>
 <td><strong>Project Deliverable</strong></td>
